--- a/index.html
+++ b/index.html
@@ -4,9 +4,95 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 <body>
-    <h1>Привіт</h1>
+    <header>
+        <nav>
+            <a href="">WebStudio</a>
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com</li>
+            <li><a href="tel:+110001111111"></a>+11 (000) 111-11-11</li>
+        </ul>
+    </header>
+    <main>
+        <section>
+            <div>
+            <h1>Effective Solutions
+            <br>for Your Business</h1>
+            <button type="button">Order Service</button>
+            </div>
+        </section>
+        <section>
+            <h2 hidden>Steps</h2>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution.</p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>What are we doing</h2>
+            <ul>
+                <li>
+                    <img src="./image/gadjet/gadjet-computer.jpg" alt="foto gadjet1">
+                </li>
+                <li>
+                    <img src="./image/gadjet/gadjet-screen.jpg" alt="foto gadjet2">
+                </li>
+                <li>
+                    <img src="./image/gadjet/gadjet-telephone.jpg" alt="foto gadjet3">
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="./image/team/mark-guerrero.jpg" alt="foto team member1" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./image/team/tom-ford.jpg" alt="foto team member2" width="264" height="260">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./image/team/camila-garcia.jpg" alt="foto team member3" width="264" height="260">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./image/team/daniel-wilson.jpg" alt="foto team member4" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="">WebStudio</a>
+    </footer>
 </body>
 </html>
